[tool.poetry]
name = "ThrottleStop"
version = "0.1.0"
description = ""
authors = ["Hoefkens Jeroen <hoefkens.j@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
Nuitka = "^0.7.7"
psutil = "^5.9.0"
ansitable = "^0.9.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
